--- a/demo/index.html
+++ b/demo/index.html
@@ -22,6 +22,7 @@
         <h4>WYSIWYG Markdown Editor</h4>
         <ul class="horizontal-section">
           <li><a href="init.html" target="_blank">Setup editor markdown</a></li>
+          <li><a href="full.html" target="_blank">Fullscreen</a></li>
           <li><a href="style.html" target="_blank">Fullscreen and Restyled</a></li>
           <li><a href="toolbar.html" target="_blank">Toolbar</a></li>
           <li><a href="styling.html" target="_blank">Css styled preview</a></li>
