--- a/test/index.html
+++ b/test/index.html
@@ -1,29 +1,16 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
+    <title>Tests exmg-markdown-editor</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <script>
-      window.WCT = {
-        environmentScripts: [
-          'stacky/browser.js',
-          'async/dist/async.js',
-          'wct-browser-legacy/node_modules/lodash/index.js',
-          'mocha/mocha.js',
-          'chai/chai.js',
-          '@polymer/sinonjs/sinon.js',
-          'sinon-chai/lib/sinon-chai.js',
-          'accessibility-developer-tools/dist/js/axs_testing.js',
-          '@polymer/test-fixture/test-fixture.js'
-        ]
-      };
-    </script>
-    <script src="../node_modules/wct-browser-legacy/browser.js"></script>
+    <script src="../node_modules/mocha/mocha.js"></script>
+    <script src="../node_modules/wct-mocha/wct-mocha.js"></script>
   </head>
   <body>
     <script>
       WCT.loadSuites([
-        'exmg-markdown-editor.html'
+        'exmg-markdown-editor.spec.html'
       ]);
     </script>
 
